Refactor SQL scripts for payments, payment ledger, outbox events, idempotency keys, and user authority tables for improved readability and consistency. Update db changelog for formatting.